[GPCAPIM-278]: Pass through client ID for proxygen credentials

--- a/.github/actions/proxy/configure-proxygen/action.yaml
+++ b/.github/actions/proxy/configure-proxygen/action.yaml
@@ -11,6 +11,9 @@ inputs:
   proxygen-api-name:
     description: 'Proxygen API name'
     required: true
+  proxygen-client-id:
+    description: 'Proxygen client ID'
+    required: true
 
 runs:
   using: composite
@@ -35,3 +38,4 @@ runs:
         cp credentials.template.yaml $HOME/.proxygen/credentials.yaml
         yq eval '.private_key_path = "/tmp/proxygen_private_key.pem"' -i $HOME/.proxygen/credentials.yaml
         yq eval '.key_id = "${{ inputs.proxygen-key-id }}"' -i $HOME/.proxygen/credentials.yaml
+        yq eval '.client_id = "${{ inputs.proxygen-client-id }}"' -i $HOME/.proxygen/credentials.yaml
