--- a/.github/actions/proxy/deploy-proxy/action.yaml
+++ b/.github/actions/proxy/deploy-proxy/action.yaml
@@ -20,6 +20,9 @@ inputs:
   proxygen-api-name:
     description: 'Proxygen API name'
     required: true
+  proxygen-client-id:
+    description: 'Proxygen client ID'
+    required: true
 
 runs:
   using: composite
@@ -30,6 +33,7 @@ runs:
         proxygen-key-secret: ${{ inputs.proxygen-key-secret }}
         proxygen-key-id: ${{ inputs.proxygen-key-id }}
         proxygen-api-name: ${{ inputs.proxygen-api-name }}
+        proxygen-client-id: ${{ inputs.proxygen-client-id }}
 
     - name: Inject secrets into openapi.yaml for deploying proxy
       shell: bash
