[GPCAPIM-278]: Remove testing line

--- a/proxygen/x-nhsd-apim.template.yaml
+++ b/proxygen/x-nhsd-apim.template.yaml
@@ -1,7 +1,7 @@
 x-nhsd-apim:
   monitoring: true
   access:
-  - title: User Restricted (hello)
+  - title: User Restricted
     grants:
       nhs-cis2-aal3: []
   target:
