[GPCAPIM-278]: Correct input name

--- a/.github/actions/proxy/tear-down-proxy/action.yaml
+++ b/.github/actions/proxy/tear-down-proxy/action.yaml
@@ -14,7 +14,7 @@ inputs:
   proxygen-api-name:
     description: 'Proxygen API name'
     required: true
-  progen-client-id:
+  proxygen-client-id:
     description: 'Proxygen client ID'
     required: true
 
