--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -231,17 +231,6 @@ jobs:
           echo "http_result=unexpected-status" >> "$GITHUB_OUTPUT"
           exit 0
 
-      - name: Run integration tests (preview environment)
-        if: github.event.action != 'closed'
-        uses: ./.github/actions/run-integration-tests
-        with:
-          base_url: ${{ steps.tf-output.outputs.preview_url }}
-          aws_region: ${{ env.AWS_REGION }}
-          mtls_secret_id: ${{ secrets.PREVIEW_MTLS_SECRET_ID }}
-          python_version: ${{ env.python_version }}
-          test_command: make test-integration
-
-
       - name: Comment function name on PR
         if: github.event_name == 'pull_request' && github.event.action != 'closed'
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd
@@ -301,3 +290,139 @@ jobs:
               issue_number: issueNumber,
               body: lines.join('\n'),
             });
+
+  test-contract:
+    name: "Contract tests"
+    needs: preview
+    if: ${{ github.event.action != 'closed' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    env:
+      BASE_URL: ${{ needs.preview.outputs.preview_url }}
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v6
+
+      - name: "Setup Python project"
+        uses: ./.github/actions/setup-python-project
+        with:
+          python-version: ${{ env.python_version }}
+
+      - name: "Run contract tests against preview environment"
+        run: make test-contract
+
+      - name: "Upload contract test results"
+        if: always()
+        uses: actions/upload-artifact@v5
+        with:
+          name: contract-test-results
+          path: gateway-api/test-artefacts/
+          retention-days: 30
+
+      - name: "Publish contract test results to summary"
+        if: always()
+        uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86
+        with:
+          paths: gateway-api/test-artefacts/contract-tests.xml
+
+  test-schema:
+    name: "Schema validation tests"
+    needs: preview
+    if: ${{ github.event.action != 'closed' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    env:
+      BASE_URL: ${{ needs.preview.outputs.preview_url }}
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v6
+
+      - name: "Setup Python project"
+        uses: ./.github/actions/setup-python-project
+        with:
+          python-version: ${{ env.python_version }}
+
+      - name: "Run schema validation tests against preview environment"
+        run: make test-schema
+
+      - name: "Upload schema test results"
+        if: always()
+        uses: actions/upload-artifact@v5
+        with:
+          name: schema-test-results
+          path: gateway-api/test-artefacts/
+          retention-days: 30
+
+      - name: "Publish schema test results to summary"
+        if: always()
+        uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86
+        with:
+          paths: gateway-api/test-artefacts/schema-tests.xml
+
+  test-integration:
+    name: "Integration tests"
+    needs: preview
+    if: ${{ github.event.action != 'closed' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    env:
+      BASE_URL: ${{ needs.preview.outputs.preview_url }}
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v6
+
+      - name: "Setup Python project"
+        uses: ./.github/actions/setup-python-project
+        with:
+          python-version: ${{ env.python_version }}
+
+      - name: "Run integration tests against preview environment"
+        run: make test-integration
+
+      - name: "Upload integration test results"
+        if: always()
+        uses: actions/upload-artifact@v5
+        with:
+          name: integration-test-results
+          path: gateway-api/test-artefacts/
+          retention-days: 30
+
+      - name: "Publish integration test results to summary"
+        if: always()
+        uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86
+        with:
+          paths: gateway-api/test-artefacts/integration-tests.xml
+
+  test-acceptance:
+    name: "Acceptance tests"
+    needs: preview
+    if: ${{ github.event.action != 'closed' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    env:
+      BASE_URL: ${{ needs.preview.outputs.preview_url }}
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v6
+
+      - name: "Setup Python project"
+        uses: ./.github/actions/setup-python-project
+        with:
+          python-version: ${{ env.python_version }}
+
+      - name: "Run acceptance tests against preview environment"
+        run: make test-acceptance
+
+      - name: "Upload acceptance test results"
+        if: always()
+        uses: actions/upload-artifact@v5
+        with:
+          name: acceptance-test-results
+          path: gateway-api/test-artefacts/
+          retention-days: 30
+
+      - name: "Publish acceptance test results to summary"
+        if: always()
+        uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86
+        with:
+          paths: gateway-api/test-artefacts/acceptance-tests.xml
