--- a/.github/actions/proxy/tear-down-proxy/action.yaml
+++ b/.github/actions/proxy/tear-down-proxy/action.yaml
@@ -27,7 +27,7 @@ runs:
         proxygen-key-secret: ${{ inputs.proxygen-key-secret }}
         proxygen-key-id: ${{ inputs.proxygen-key-id }}
         proxygen-api-name: ${{ inputs.proxygen-api-name }}
-        proxygen-client-id: ${{ inputs.progen-client-id }}
+        proxygen-client-id: ${{ inputs.proxygen-client-id }}
 
     - name: Tear down preview API proxy
       shell: bash
