--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -13,6 +13,7 @@ clinical-data-common = { git = "https://github.com/NHSDigital/clinical-data-comm
 flask = "^3.1.2"
 types-flask = "^1.1.6"
 requests = "^2.32.5"
+pytest-mock = "^3.15.1"
 
 [tool.poetry]
 packages = [{include = "gateway_api", from = "src"},
@@ -55,6 +56,7 @@ dev = [
     "schemathesis>=4.4.1",
     "types-requests (>=2.32.4.20250913,<3.0.0.0)",
     "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
+    "pytest-mock (>=3.15.1,<4.0.0)",
 ]
 
 [tool.mypy]
